syntax = "proto3";

package service;

option go_package = "github.com/muh-hidayaat/go-grpc-ecommerce-be/pb/service";

service HelloWorld {
  rpc HelloWorld (HelloRequest) returns (HelloResponse);
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}